<resources>
    <string name="app_name">Egg Simulator</string>
    <string name="player_level_text">What level do you want to simulate being?</string>
    <string name="choose_egg_size">Choose the specific egg you want to simulate!</string>
    <string name="pokepop_title">Congratulations! you got a %s!</string>
    <string name="pokepop_name">%1$s</string>
    <string name="pokepop_level">Level %1$s</string>
    <string name="pokepop_hp">%1$s HP</string>
    <string name="pokepop_cp">CP: %1$s</string>
    <string name="pokepop_weight">Weight: %1$s</string>
    <string name="pokepop_length">Length: %1$s</string>
    <string name="pokepop_iv_cp">CP RATING: %1$s</string>
    <string name="pokepop_iv_hp">HP RATING: %1$s</string>

    <string name="actionbar_home">Startpage</string>
    <string name="actionbar_pokebag">Pokemon bag</string>

    <string name="info_dialog_title_pokemon_missing">You can\'t access this egg yet!</string>
    <string name="info_dialog_body_pokemon_missing">You need to have caught all the pokemons that exists in the previous egg to proceed to the next one. These are your remaining ones: </string>

    <string name="error_choose_egg">Choose the egg you want to open before proceeding</string>

    <string name="egg_dont_crack">Disable cracking</string>
    <string name="twokm">2 km</string>
    <string name="fivekm">5 km</string>
    <string name="tenkm">10 km</string>
    <string name="general_continue">Continue</string>
    <string name="general_ok">OK</string>
    <string name="general_save">Save</string>
    <string name="general_new">NEW</string>
</resources>
