<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:minWidth="400dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/pokeImage"
            android:layout_marginTop="24dp"
            android:layout_width="384px"
            android:layout_height="384px"
            android:scaleType="fitXY"
            android:layout_centerHorizontal="true"
            android:src="@color/colorPrimary"
            />
        <TextView
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pokeImage"
            android:text="@string/pokepop_title"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/lvlText"
        android:paddingTop="16dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokepop_level"
        />
    <View
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/black"/>

    <TextView
        android:id="@+id/cpText"
        android:paddingTop="16dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokepop_cp"
        />
    <View
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/black"/>
    <TextView
        android:id="@+id/hpText"
        android:paddingTop="16dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokepop_hp"
        />
    <View
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/black"/>
   <!-- <TextView
        android:id="@+id/weightText"
        android:paddingTop="16dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokepop_weight"
        />
    <View
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/black"/>
    <TextView
        android:id="@+id/heightText"
        android:paddingTop="16dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokepop_length"
        />
    <View
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/black"/> -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="44dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/ok_button"
            android:layout_margin="24dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/general_ok"/>
        <Button
            android:id="@+id/save_button"
            android:layout_margin="24dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/general_save"/>
    </LinearLayout>

</LinearLayout>